feat(v2): Add GraalVM reachability metadata for core utilities (#1753)
Provides GraalVM Reachability Metadata files and respective Maven configurations / profiles for building a native-image for all core-utilities. Also refactors all unit tests to use Junit Pioneer for mocking environment variables.

---------

Co-authored-by: Philipp Page <pagejep@amazon.com>